[gd_scene load_steps=12 format=2]

[ext_resource path="res://LVL/2 Main Screen/IMG/Artems_logo_part.png" type="Texture" id=1]
[ext_resource path="res://LVL/2 Main Screen/IMG/adventure_logo_part.png" type="Texture" id=2]
[ext_resource path="res://LVL/2 Main Screen/SCN/Animation intro/AnimationIntro.gd" type="Script" id=3]

[sub_resource type="Animation" id=6]
resource_name = "Dispersion"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFlash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Flashbang"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFlash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFlash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dispersion"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Artems:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 324.5, -363 ), Vector2( 234, 166 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Artems:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 335.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Artems:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Adventure:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 374, -271 ), Vector2( 280, 262 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Adventure:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 335.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Adventure:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fly in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Adventure:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -365, 529 ), Vector2( 964, 523 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Pulsation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Artems:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 234, 166 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Artems:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 335.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Artems:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Adventure:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 280, 262 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Adventure:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 335.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Adventure:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Artems:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 967, 1343 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Artems:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Adventure:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -365, 529 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Artems:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Adventure:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Adventure:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Roll in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Artems:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 967, 1343 ), Vector2( 967, 398 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Artems:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 360.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRectBlack" type="ColorRect" parent="."]
margin_right = 1925.0
margin_bottom = 1088.0
color = Color( 0, 0, 0, 1 )

[node name="Artems" type="Sprite" parent="."]
position = Vector2( 967, 1343 )
rotation = -6.28319
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Adventure" type="Sprite" parent="."]
position = Vector2( -365, 529 )
rotation = 6.28319
texture = ExtResource( 2 )

[node name="AnimationRect" type="AnimationPlayer" parent="."]
anims/Dispersion = SubResource( 6 )
anims/Flashbang = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="AnimationLogo" type="AnimationPlayer" parent="."]
anims/Dispersion = SubResource( 7 )
"anims/Fly in" = SubResource( 1 )
anims/Pulsation = SubResource( 8 )
anims/RESET = SubResource( 2 )
"anims/Roll in" = SubResource( 3 )

[node name="ColorRectFlash" type="ColorRect" parent="."]
margin_right = 1932.0
margin_bottom = 1087.0
color = Color( 1, 1, 1, 0 )
